# CC-OSV-BOT

./: README.md  accounts.csv  bot_info.json  config.py  economy.py  help.json  help.py  keep_alive.py  main.py  mainbank.json  pyproject.toml  requirements.txt
Commands/: Level.py  Lhelp.py  Mine.py  Text substitution .py  economy.py  encryption.py  event.py  fun.py  game.py  help.py  helpX.py  main.py  nsfw.py  owner.py  search.py  time.py  weather.py  利息.py  文字替代.py
Commands/games/: tictactoe.py  wumpus.py
Core/: classes.py  economy.py  errors.py  miner.py
Systems/: levelsys.py
cmds/: NQN.py  cl3i.py  economy.py  encryption.py  event.py  fun.py  game.py  help.py  helpX.py  main.py  mod.py  music.py  nsfw.py  other.py  owner.py  run.py  search.py  task.py  weather.py  利息.py  文字替代.py
cmds/games/: economy.py
core/: Miner.py  account.py  check.py  classes.py  economy.py  errors.py
games/: minesweeper.py  tictactoe.py  twenty.py  wumpus.py
settings/: message_process.json  search.json
utils/: default.py  http.py
