[tool.poetry]
name = "repl_python3_CCremixxxx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
async-timeout = "^3.0.1"
discord = "^1.0.1"
discord-webhook = "^0.13.0"
flask = "^2.0.1"
pandas = "^1.2.4"
youtube-dl = "^2021.5.16"
aiopentdb = "^1.0.0"
timeago = "^1.0.15"
google = "^3.0.0"
wikipedia = "^1.4.0"
PyNaCl = "^1.4.0"
psutil = "^5.8.0"
discord-components = "^0.5.3"
pymongo = "^3.11.4"
googletrans = "^3.1.0a0"
disputils = "^0.2.0"
MongoDBProxy = "^0.1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
